# c-_android_example

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/c/: ExampleInstrumentedTest.kt
app/src/main/cpp/: CMakeLists.txt  my_lib.cpp  native_lib.cpp
app/src/main/java/com/example/c/: MainActivity.kt
app/src/main/lib/: _libwebp.a_  libwebp.so.6.0.2
app/src/test/java/com/example/c/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
